# taskwarrior-gpui

./: Cargo.toml  LICENSE-APACHE  README.md
docs/: keyboard-shortcuts.md  keymap.md
src/: app.rs  dispatcher.rs  main.rs  theme.rs  ui.rs
src/components/: divider.rs  icon.rs  label.rs  list.rs  mod.rs  modal.rs  panel.rs  toast.rs
src/components/button/: dropdown.rs  mod.rs
src/components/input/: mod.rs  suggestion.rs
src/keymap/: active_context.rs  chord.rs  command.rs  context.rs  defaults.rs  dispatcher.rs  keymap.rs  mod.rs
src/models/: filter_state.rs  mod.rs  project_tree.rs
src/task/: error.rs  filter.rs  mod.rs  model.rs  service.rs
src/view/: app_layout.rs  mod.rs  sidebar.rs  status_bar.rs  task_detail_modal.rs  task_table.rs
