[package]
name = "task-warrior-gpui"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
env_logger = "0.11.0"
gpui = "0.2.2"
log = "0.4.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
taskchampion = "2.0.3"
uuid = { version = "1.19.0", features = ["v4"] }
